--- a/package.json
+++ b/package.json
@@ -95,7 +95,9 @@
     "gulp-typedoc": "^2.2.0",
     "source-map-loader": "^0.2.3",
     "typedoc": "^0.11.1",
-    "typescript": "3.6.3"
+    "typescript": "3.6.3",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   },
   "workspaces": [
     "packages/*"
