--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "author": "Ekliptor",
   "license": "AGPL",
   "scripts": {
-    "watch": "webpack --progress --colors --watch"
+    "watch": "webpack --progress --colors --watch",
+    "tsc": "tsc",
+    "dev": "ts-node-dev --respawn --transpileOnly ./app/app.ts",
+    "prod": "tsc && node ./build/app.js"
   },
   "homepage": "https://wolfbot.org",
   "repository": "https://github.com/Ekliptor/WolfBot.git",
@@ -94,6 +97,7 @@
     "gulp": "^3.9.1",
     "gulp-typedoc": "^2.2.0",
     "source-map-loader": "^0.2.3",
+    "ts-node-dev": "^1.0.0-pre.44",
     "typedoc": "^0.11.1",
     "typescript": "3.6.3",
     "webpack": "^4.43.0",
